chore(plc4j): Undid the code-"improvement" IntelliJ suggested ;-)